--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Fly Deploy
+name: Deploy to Fly.io
 on:
   push:
     branches:
@@ -10,21 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
+        
+      - name: Deploy to Fly.io
+        uses: fly-apps/fly-deploy-action@v0.1.1
         with:
-          ruby-version: '3.2.0'
-          bundler-cache: true
-          
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16.15.1'
-          
-      - uses: superfly/flyctl-actions/setup-flyctl@master
-      
-      - name: Deploy to fly
-        run: flyctl deploy --remote-only
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          api_token: ${{ secrets.FLY_API_TOKEN }}
