--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,13 +6,15 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to Fly.io
+    name: Deploy app
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Setup Flyctl
+        uses: superfly/flyctl-actions/setup-flyctl@master
         
       - name: Deploy to Fly.io
-        uses: fly-apps/flyctl-actions@master
-        with:
-          api_token: ${{ secrets.FLY_API_TOKEN }}
-          args: "deploy"
+        run: flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
