--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,9 +11,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Setup Flyctl
-        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Install Fly CLI
+        run: curl -L https://fly.io/install.sh | sh
         
+      - name: Add Fly CLI to PATH
+        run: echo "/home/runner/.fly/bin" >> $GITHUB_PATH
+        
+      - name: Authenticate with Fly CLI
+        run: flyctl auth token "$FLY_API_TOKEN"
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      
       - name: Deploy to Fly.io
         run: flyctl deploy --remote-only
         env:
