--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,14 +11,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Install Fly CLI
-        run: curl -L https://fly.io/install.sh | sh
-        
-      - name: Add Fly CLI to PATH
-        run: echo "/home/runner/.fly/bin" >> $GITHUB_PATH
-        
-      - name: Authenticate with Fly CLI
-        run: flyctl auth token "$FLY_API_TOKEN"
+      - name: Set up Flyctl
+        uses: superfly/flyctl-actions/setup-flyctl@master
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      
+      - name: Verify authentication
+        run: flyctl auth whoami
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       
