--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,17 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Set up Flyctl
-        uses: superfly/flyctl-actions/setup-flyctl@master
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-      
-      - name: Verify authentication
-        run: flyctl auth whoami
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-      
-      - name: Deploy to Fly.io
-        run: flyctl deploy --remote-only
+      - name: Use Fly CLI
+        uses: superfly/flyctl-actions@master
+        with:
+          args: "deploy"
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
