--- a/fly.toml
+++ b/fly.toml
@@ -35,9 +35,25 @@ console_command = "/rails/bin/rails console"
   processes = ["app", "worker"]  # Run both processes on the same machine
   restart_policy = "always"
 
+  [[http_service.concurrency]]
+    type = "connections"
+    hard_limit = 1000
+    soft_limit = 800
+
+  [http_service.resources]
+    memory_mb = 1024  # Increase to 1GB RAM
+    cpu_kind = "shared"
+    cpu_cores = 1
+
 [processes]
   app = "bin/rails server -p 3000"
   worker = "bin/jobs"
+
+[[vm]]
+  processes = ["worker"]
+  memory = "512mb"
+  cpu_kind = "shared"
+  cpus = 1
 
 [[statics]]
   guest_path = "/rails/public"
